--- a/src/app/components/sign-in/sign-in.component.html
+++ b/src/app/components/sign-in/sign-in.component.html
@@ -1,7 +1,7 @@
 <div class="flex min-h-screen bg-[url('https://carthagemagazine.com/wp-content/uploads/2022/09/Cosmitto-Coffee1-.jpg')] flex-col justify-center px-6 py-12 lg:px-8">
     <div class="absolute inset-0 bg-black bg-opacity-60 backdrop-blur-sm"></div>
     <div class="sm:mx-auto sm:w-full sm:max-w-sm z-10">
-        <img class="mx-auto h-20 w-auto animate-slideUp2" src="assets/images/logo.png" alt="">
+        <img routerLink="/" class="cursor-pointer mx-auto h-20 w-auto animate-slideUp2" src="assets/images/logo.png" alt="">
         <h2 class="animate-slideUp3 mt-10 text-center text-2xl font-bold leading-9 tracking-tight text-gocolor">Welcome Back!</h2>
     </div>
   
