--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+    font-family: 'MyCustomFont';
+    src: url('/assets/fonts/Thesignature.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+
+    font-family: 'MyCustomFont';
+    src: url('/assets/fonts/OpenSans-VariableFont_wdth,wght.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+    
+  }
