--- a/src/app/components/frontpage/frontpage.component.html
+++ b/src/app/components/frontpage/frontpage.component.html
@@ -13,7 +13,7 @@
   }
   ```
 -->
-<div class="bg-white">
+<div class="bg-slate-700">
     <!--
       Mobile menu
   
@@ -30,8 +30,11 @@
           From: "opacity-100"
           To: "opacity-0"
       -->
-      <div *ngIf="menuOpen" class="fixed inset-0 bg-black bg-opacity-25"></div>
-  
+      <div 
+        class="fixed inset-0 bg-black bg-opacity-25 transition-opacity duration-300" 
+        [ngClass]="{'opacity-0 pointer-events-none': !menuOpen, 'opacity-100': menuOpen}">
+      </div>
+
       <div *ngIf="!hidden" class="fixed inset-0 flex">
         <!--
           Off-canvas menu, show/hide based on off-canvas menu state.
@@ -43,8 +46,15 @@
             From: "translate-x-0"
             To: "-translate-x-full"
         -->
-        <div [ngClass]="{'transition ease-in-out duration-300 transform -translate-x-full': !menuOpen}" class="relative flex w-full max-w-xs flex-col overflow-y-auto bg-orange-950/90 pb-12 shadow-xl">
-          <div class="flex px-4 pb-2 pt-5 bg-orange-950/90">
+        <div 
+          class="fixed inset-0 flex"
+          [ngClass]="{
+            'translate-x-0 opacity-100 pointer-events-auto': menuOpen, 
+            '-translate-x-full opacity-0 pointer-events-none': !menuOpen
+          }"
+          class="relative flex w-full max-w-xs flex-col overflow-y-auto bg-orange-950/90 pb-12 shadow-xl transform transition-all duration-300 ease-in-out opacity-0"
+        >
+        <div class="flex px-4 pb-2 pt-5 bg-orange-950/90">
             <button (click)="toggleMenu()" type="button" class="-m-2 inline-flex items-center justify-center rounded-md p-2 text-gray-400">
               <span class="sr-only">Close menu</span>
               <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
@@ -258,10 +268,12 @@
   
           <div class="space-y-6 border-t border-orange-500 px-4 py-6">
             <div class="flow-root">
-              <a routerLink="/sign_in" class="-m-2 block p-2 font-medium text-gocolor">Sign in</a>
+              <a *ngIf="!user" routerLink="/sign_in" class="-m-2 block p-2 font-medium text-gocolor">Sign in</a>
+              <button (click)="openLogoutDialog()" *ngIf="user" class="text-red-700 font-semibold">Log Out</button>
             </div>
             <div class="flow-root">
-              <a routerLink="/create_account" class="-m-2 block p-2 font-medium text-gocolor">Create account</a>
+              <a *ngIf="!user" routerLink="/create_account" class="-m-2 block p-2 font-medium text-gocolor">Create account</a>
+              <button (click)="openDeletionDialog()" *ngIf="user" class="text-red-700 font-semibold">Delete Account</button>
             </div>
           </div>
         </div>
@@ -289,7 +301,7 @@
               </a>
             </div>
 
-              <h1 class="absolute right-16 lg:right-28 z-50 lg:w-20 lg:mb-2 text-gocolor overflow-hidden whitespace-nowrap text-ellipsis font-mono text-xl">{{user?.name}}</h1>
+              <h1 (click)="goToManageAccount()" class="absolute cursor-help right-16 lg:right-28 z-50 lg:w-32 lg:mb-2 text-gocolor overflow-hidden whitespace-nowrap text-ellipsis font-semibold text-md">{{user?.name}}</h1>
 
               <!-- Flyout menus -->
             <div class="hidden lg:ml-8 lg:block lg:self-stretch">
@@ -556,12 +568,12 @@
                 <a href="#location" class="flex items-center text-sm font-medium text-gocolor hover:text-darker transition-colors duration-200 ease-out">Location</a>
                 <div href="#" class="p-2 text-gray-400 lg:ml-4 translate-x-[350px] flex gap-8 translate-y-2">
                   <span class="sr-only">Account</span>
-                  <svg [ngClass]="{'text-gocolor translate-x-[150px]': user}" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+                  <svg [ngClass]="{'text-gocolor translate-x-[100px]': user}" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 6a3.75 3.75 0 11-7.5 0 3.75 3.75 0 017.5 0zM4.501 20.118a7.5 7.5 0 0114.998 0A17.933 17.933 0 0112 21.75c-2.676 0-5.216-.584-7.499-1.632z" />
                   </svg> 
-                  <span *ngIf="!user"> <a routerLink="/create_account" class="hover:text-gray-500 cursor-pointer">Create Account</a> </span>
+                  <span *ngIf="!user"> <a routerLink="/create_account" class="hover:text-gray-500 cursor-pointer font-medium">Create Account</a> </span>
                   <span *ngIf="!user">|</span>
-                  <span *ngIf="!user"> <a routerLink="/sign_in" class="hover:text-gray-500 cursor-pointer">Sign In</a> </span>
+                  <span *ngIf="!user"> <a routerLink="/sign_in" class="hover:text-gray-500 cursor-pointer font-medium">Sign In</a> </span>
                 </div>
               </div>
             </div>
@@ -805,41 +817,64 @@
       
     </main>
   
-    <footer aria-labelledby="footer-heading" class="bg-white">
+    <footer aria-labelledby="footer-heading" class="bg-slate-700/20">
       <h2 id="footer-heading" class="sr-only">Footer</h2>
       <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
         <div class="py-20 xl:grid xl:grid-cols-3 xl:gap-8">
           <div class="grid grid-cols-2 gap-8 xl:col-span-2">
             <div class="col-span-2 xl:col-span-2">
               <div class="">
-                <h3 class="text-sm font-medium text-gray-900">Contact Us</h3>
+                <h3 class="text-sm font-medium text-gocolor">Contact Us</h3>
                 <ul role="list" class="mt-6 grid grid-cols-2 lg:grid-rows-2 lg:gap-5 lg:w-[600px] gap-5">
                   <li class="text-sm">
-                    <a href="https://www.facebook.com/Gocafe.tn" class="text-gray-500 hover:text-gray-600">Facebook</a>
+                    <a href="https://www.facebook.com/Gocafe.tn" class="text-blue-600 hover:text-blue-400">Facebook</a>
                   </li>
                   <li class="text-sm">
-                    <a href="https://www.instagram.com/gocafe.tn/" class="text-gray-500 hover:text-gray-600">Instagram</a>
+                    <a href="https://www.instagram.com/gocafe.tn/" class="text-pink-600 hover:text-pink-400">Instagram</a>
                   </li>
                   <li class="text-sm">
-                    <a class="text-gray-900">Phone Number: 24 101 831</a>
+                    <span class="text-gocolor">Phone Number: 24 101 831</span>
                   </li>
                   <li class="text-sm">
-                    <a class="text-gray-900">E-mail: gocafe&#64;gomarket.com.tn</a>
+                    <span class="text-gocolor">E-mail: gocafe&#64;gomarket.com.tn</span>
                   </li>
                 </ul>
               </div>
             </div>
           </div>
-          <div class="mt-16 md:mt-16 xl:mt-0">
-            <h3 class="text-sm font-medium text-gray-900">Sign up to order</h3>
-            <p class="mt-6 text-sm text-gray-500">The latest deals and savings, sent to your inbox weekly.</p>
+
+          <div *ngIf="!user" class="mt-16 md:mt-16 xl:mt-0">
+            <h3 class="text-sm font-medium text-gocolor">Sign up to order</h3>
+            <p class="mt-6 text-sm text-gray-200">The latest deals and savings, sent to your inbox weekly.</p>
             <form class="mt-2 flex sm:max-w-md">
               <label for="email-address" class="sr-only">Email address</label>
-              <input id="email-address" type="text" autocomplete="email" required class="w-full min-w-0 appearance-none rounded-md border border-gray-300 bg-white px-4 py-2 text-base text-indigo-500 placeholder-gray-500 shadow-sm focus:border-indigo-500 focus:outline-none focus:ring-1 focus:ring-indigo-500">
+              <input id="email-address" type="text" autocomplete="email" required class="w-full min-w-0 appearance-none rounded-md border border-gray-300 bg-white px-4 py-2 text-base text-gocolor placeholder-gray-500 shadow-sm focus:border-gocolor focus:outline-none focus:ring-1 focus:ring-gocolor">
               <div class="ml-4 flex-shrink-0">
-                <button type="submit" class="flex w-full items-center justify-center rounded-md border border-transparent bg-gocolor px-4 py-2 text-base font-medium text-white shadow-sm hover:bg-darker focus:outline-none focus:ring-2 focus:ring-orange-900 focus:ring-offset-2">Sign up</button>
+                <button routerLink="/create_account" type="submit" class="flex w-full items-center justify-center rounded-md border border-transparent bg-gocolor px-4 py-2 text-base font-medium text-white shadow-sm hover:bg-darker focus:outline-none focus:ring-2 focus:ring-orange-900 focus:ring-offset-2">Sign up</button>
               </div>
             </form>
+          </div>
+
+          <div *ngIf="user" class="mt-16 md:mt-16 xl:mt-0">
+            <h3 class="text-sm font-medium text-gocolor">Rate Us!</h3>
+            
+            <div class="flex items-center">
+              <nz-rate [(ngModel)]="rating" nzAllowHalf (ngModelChange)="onRatingChange($event)"></nz-rate>
+            </div>
+
+            <p class="mt-6 text-sm font-medium text-gocolor">Give Feedback:</p>
+            <div class="mt-2 flex sm:max-w-md">
+
+                <mat-form-field>
+                  <mat-label class="text-gocolor">Leave a comment</mat-label>
+                  <textarea [(ngModel)]="message_body" class="bg-gray-500" matInput placeholder="Ex. I love Go Cafe..."></textarea>
+                </mat-form-field>
+
+              <div class="ml-4 flex-shrink-0">
+                <button (click)="submitFeedback(user.email, message_body, rating)" type="submit" class="flex w-full items-center justify-center rounded-md border border-transparent bg-gocolor px-4 py-2 text-base font-medium text-white shadow-sm hover:bg-darker focus:outline-none focus:ring-2 focus:ring-orange-900 focus:ring-offset-2">Send Feedback</button>
+              </div>
+
+            </div>
           </div>
         </div>
   
