--- a/src/styles.css
+++ b/src/styles.css
@@ -3,14 +3,16 @@
 @tailwind utilities;
 
 @font-face {
-    font-family: 'MyCustomFont';
+    font-family: 'thesignature';
     src: url('/assets/fonts/Thesignature.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 
-    font-family: 'MyCustomFont';
+    font-family: 'opensans';
     src: url('/assets/fonts/OpenSans-VariableFont_wdth,wght.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
     
   }
+
+
